# ChangeLog for sys-libs/timezone-data
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.195 2009/07/24 16:39:15 josejx Exp $

  24 Jul 2009; Joseph Jezak <josejx@gentoo.org> timezone-data-2009j.ebuild:
  Marked ppc/ppc64 stable for bug #278585.

*timezone-data-2009k (23 Jul 2009)

  23 Jul 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009k.ebuild:
  Version bump #278605 by Rodrigo Severo.

  22 Jul 2009; Raúl Porcel <armin76@gentoo.org> timezone-data-2009j.ebuild:
  alpha/arm/ia64/s390/sh/sparc/x86 stable wrt #277585

  22 Jul 2009; Jeroen Roovers <jer@gentoo.org> timezone-data-2009j.ebuild:
  Stable for HPPA (bug #278585).

  22 Jul 2009; Jeremy Olexa <darkside@gentoo.org>
  timezone-data-2009j.ebuild:
  amd64 stable, bug 278585

  17 Jul 2009; nixnut <nixnut@gentoo.org> timezone-data-2009g.ebuild:
  ppc stable #274842

  04 Jul 2009; Brent Baude <ranger@gentoo.org> timezone-data-2009g.ebuild:
  Marking timezone-data-2009g ppc64 for bug 274842

  27 Jun 2009; Richard Freeman <rich0@gentoo.org>
  timezone-data-2009g.ebuild:
  amd64 stable - 274842

  22 Jun 2009; Raúl Porcel <armin76@gentoo.org> timezone-data-2009g.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc/x86 stable wrt #274842

  22 Jun 2009; Jeroen Roovers <jer@gentoo.org> timezone-data-2009g.ebuild:
  Stable for HPPA (bug #274842).

*timezone-data-2009j (20 Jun 2009)

  20 Jun 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009j.ebuild:
  Version bump #274840 by Arfrever Frehtes Taifersar Arahesis.

*timezone-data-2009i (08 Jun 2009)

  08 Jun 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009i.ebuild:
  Version bump #273232 by Rodrigo Severo.

*timezone-data-2009g (29 Apr 2009)

  29 Apr 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009g.ebuild:
  Version bump #267651 by Rodrigo Severo.

*timezone-data-2009f (14 Apr 2009)
